# 2InOne

./: .gitignore  readme.md
mainc/: pyproject.toml
mainc/src/: main.py
packagea/: pyproject.toml
packagea/apps/packagea/: a.py
packageb/: pyproject.toml
packageb/apps/packageb/: b.py
