[tool.poetry]
name = "mainc"
version = "0.1.0"
description = ""
authors = ["svtter <svtter@qq.com>"]

[tool.poetry.dependencies]
python = "^3.9"
packagea = {path = "../packagea"}
packageb = {path = "../packageb"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
