[tool.poetry]
name = "packageb"
version = "0.1.0"
description = ""
authors = ["svtter <svtter@qq.com>"]
packages = [
    { include = "apps" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
